Fix Experience on Mobile

--- a/style.css
+++ b/style.css
@@ -527,6 +527,7 @@ span{
 
 /* Styling untuk halaman Experience */
 .experience {
+    padding-top : 10rem;
     padding-bottom: 7rem;
 }
 
